<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Inu</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_tela_inicial">TelaInicialActivity</string>
    <string name="login">Login</string>
    <string name="senha">Senha</string>
    <string name="primeiraVez">Primeira vez? Cadastre-se:</string>
    <string name="botao_cadastro">Cadastrar-se</string>
    <string name="novo">Novo por aqui?</string>
    <string name="atualizacoes_recentes">Atualizações recentes</string>
    <string name="title_activity_cadastro_usuario">CadastroUsuarioActivity</string>
    <string name="nome">Nome</string>
    <string name="email">Email</string>
    <string name="confimar_senha">Confirmar senha</string>
    <string name="inu_cadastrar_usuario">Inu - Cadastrar Usuário</string>
    <string name="link_lattes">Link para o Lattes</string>
    <string name="telefone">Telefone</string>
    <string name="celular">Celular</string>
    <string name="dados_pessoais">Dados pessoais</string>
    <string name="curso">Curso</string>
    <string name="area_pesquisa">Área de pesquisa</string>
    <string name="pesquisa_atual">Pesquisa atual</string>
    <string name="grupo_pesquisa">Grupo de pesquisa</string>
    <string name="dados_academicos">Dados acadêmicos</string>
    <string name="data_nascimento">Data de nascimento</string>
    <string name="nome_orientador">Nome do orientador</string>
    <string name="dados_profissionais">Dados profissionais</string>
    <string name="empresa_instituicao">Nome da Empresa/Instituição</string>
    <string name="cargo">Cargo</string>
    <string name="title_activity_cadastro_palestra">CadastroPalestraActivity</string>
    <string name="inu_cadastrar_palestra">Inu - Cadastrar Palestra</string>
    <string name="titulo_palestra">Título da palestra</string>
    <string name="nome_palestrante">Nome do palestrante</string>
    <string name="descricao_palestra">Descrição da palestra</string>
    <string name="data">Data</string>
    <string name="horario">Horário</string>
    <string name="login_facebook">Efetuar login com o Facebook</string>
    <string name="inicio">Início</string>
    <string name="calendario">Calendário</string>
    <string name="palestras">Palestras/Defesas/Eventos</string>
    <string name="usuarios">Usuários</string>
    <string name="notificacoes">Notificações</string>
    <string name="perfil">Perfil</string>
    <string name="inu_inicio">Inu - Início</string>
    <string name="inu_login">Inu - Login</string>
    <string name="inu_loginlbl">Inu - Login</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="buscar_usuarios">Buscar usuários</string>
    <string name="buscar">Buscar</string>
    <string name="title_activity_tipo_cadastro">TipoCadastroActivity</string>
    <string name="cadastrar_palestra">Cadastrar Palestra</string>
    <string name="cadastrar_defesa">Cadastrar Defesa</string>
    <string name="cadastrar_evento_congresso">Cadastrar Evento/Congresso</string>
    <string name="adicionar_local_endereco">Adicionar local/endereço</string>
    <string name="inu_escolher_cadastro">Inu - Ecsolha o tipo de cadastro</string>
    <string name="title_activity_cadastro_defesa">CadastroDefesaActivity</string>
    <string name="titulo_defesa">T[itulo da defesa</string>
    <string name="nome_autor">Nome do autor</string>
    <string name="conclusao_curso">Conclusão de Curso</string>
    <string name="tipo_defesa">Tipo de defesa</string>
    <string name="mestrado">Mestrado</string>
    <string name="doutorado">Doutorado</string>
    <string name="pos_doutorado">Pós-Doutorado</string>
    <string name="resumo">Resumo</string>
    <string name="membros_banca">Membros da banca</string>
    <string name="inu_cadastrar_defesa">Inu - Cadastrar Defesa</string>
    <string name="cadastrar_atualizar">Cadastrar/Atualizar</string>
    <string name="visualizar">Visualizar</string>
    <string name="editar">Editar</string>
    <string name="excluir">Excluir</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="cadastrarse">Cadastrar-se</string>
    <string name="recuperar_senha">Recuperar senha</string>
    <string name="title_activity_visualiza_usuario">VisualizaUsuarioActivity</string>
    <string name="title_activity_visualiza_palestra">VisualizaPalestraActivity</string>
    <string name="title_activity_busca_usuario">BuscaUsuarioActivity</string>
    <string name="title_activity_busca_palestra">BuscaPalestraActivity</string>
    <string name="title_activity_cadastro_endereco">CadastroEnderecoActivity</string>
    <string name="local">Local</string>
    <string name="adicionar_calendario">Adicionar no Calendário</string>
    <string name="endereco">Endereço</string>
    <string name="numero">Número</string>
    <string name="complemento">Complemento</string>
    <string name="bairro">Bairro</string>
    <string name="cidade">Cidade</string>
    <string name="estado">Estado</string>
    <string name="pais">País</string>
    <string name="google_maps">Google Maps</string>

</resources>