<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CadastroDefesaActivity" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textViewTituloDefesa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titulo_defesa"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/editTextTituloDefesa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" >

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/textViewNomeAutor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nome_autor"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/editTextNomeAutor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10" />

            <TextView
                android:id="@+id/textViewTipoDefesa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tipo_defesa"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <RadioGroup
                android:id="@+id/radioGroupTipoDefesa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <RadioButton
                    android:id="@+id/radioButtonConclusaoCurso"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/conclusao_curso" />

                <RadioButton
                    android:id="@+id/radioButtonMestrado"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mestrado" />

                <RadioButton
                    android:id="@+id/radioDoutorado"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/doutorado" />

                <RadioButton
                    android:id="@+id/radioButtonPosDoutorado"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pos_doutorado" />
            </RadioGroup>

            <TextView
                android:id="@+id/textViewResumo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resumo"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/editTextResumo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine" />

            <TextView
                android:id="@+id/textViewData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/data"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/editTextData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="date" />

            <TextView
                android:id="@+id/textViewHorario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/horario"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/editTextHorario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="time" />

            <TextView
                android:id="@+id/textViewMembrosBanca"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/membros_banca"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/editTextMembrosBanca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine" />

            <Spinner
                android:id="@+id/spinnerAreaAcademica"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ListView
                android:id="@+id/listViewAreasAcademicasInteresse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </ListView>

            <Button
                android:id="@+id/buttonAdicionarLocalEndereco"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adicionar_local_endereco" />

            <Button
                android:id="@+id/buttonCadastrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/cadastrar" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>