<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".VisualizaPalestraActivity" >

    <TextView
        android:id="@+id/textViewVisualizarTituloPalestra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_palestra" />

    <TextView
        android:id="@+id/textViewExibirTituloPalestra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Medium Text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textViewVisualizarNomePalestrante"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nome_palestrante" />

    <TextView
        android:id="@+id/textViewExibirNomePalestrante"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Medium Text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textViewVisualizarDecricaoPalestra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descricao_palestra"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textViewExibirDescricaoPalestra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Medium Text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textViewVisualizarData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/data" />

    <TextView
        android:id="@+id/textViewExibirData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Medium Text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textViewVisulizarHorario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/horario" />

    <TextView
        android:id="@+id/textViewExibirHorario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Medium Text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textViewVisualizacaoLocal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/local" />

    <TextView
        android:id="@+id/textViewExibirEndereco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Medium Text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/buttonAdicionarCalendario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/adicionar_calendario" />

</LinearLayout>
